# brawl-starter

./: CMakeLists.txt  README  README.md  dev.tswanson.brawl-starter.notifyrc  kocity-qt.kdev4
src/: constants.h  installer.cpp  installer.h  launcher.cpp  launcher.h  main.cpp  secrets.cpp  secrets.h  server_query.cpp  server_query.h
src/ui/: add_server_dialog.cpp  add_server_dialog.h  add_server_dialog.ui  kocity-qt.cpp  kocity-qt.h  kocity-qt.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  settings_window.cpp  settings_window.h  settings_window.ui
